@@ -1,11 +1,11 @@
-# $NetBSD: buildlink2.mk,v 1.3 2003/01/24 11:40:04 jlam Exp $
+# $NetBSD: buildlink2.mk,v 1.4 2003/01/24 12:41:18 jlam Exp $
 #
 
 .if !defined(GDCHART_BUILDLINK2_MK)
 GDCHART_BUILDLINK2_MK=	# defined
 
 BUILDLINK_PACKAGES+=			gdchart
-BUILDLINK_DEPENDS.gdchart?=		gdchart>=0.10.1nb2
+BUILDLINK_DEPENDS.gdchart?=		gdchart>=0.10.1nb3
 BUILDLINK_PKGSRCDIR.gdchart?=		../../graphics/gdchart
 
 EVAL_PREFIX+=	BUILDLINK_PREFIX.gdchart=gdchart
@@ -16,7 +16,7 @@ BUILDLINK_FILES.gdchart+=	include/gdcpie.h
 BUILDLINK_FILES.gdchart+=	include/gifencode.h
 BUILDLINK_FILES.gdchart+=	lib/libgdchart.*
 
-.include "../../graphics/jpeg/buildlink2.mk"
+.include "../../graphics/gd/buildlink2.mk"
 
 BUILDLINK_TARGETS+=	gdchart-buildlink
 
