@@ -1,7 +1,7 @@
-$NetBSD: distinfo,v 1.3 2003/01/17 13:49:07 jmmv Exp $
+$NetBSD: distinfo,v 1.4 2003/01/24 12:41:18 jlam Exp $
 
 SHA1 (gdchart0.10.1dev.tar.gz) = 52edc97cb45fc441afc4728c812cd33ddab9ef5c
 Size (gdchart0.10.1dev.tar.gz) = 40708 bytes
 SHA1 (patch-aa) = 6755bc77ee3e5bfb4dc92459d41f6ad4f8f76e75
 SHA1 (patch-ab) = 100c284c8f9400785ef9eff42c81a9f13d73c1e5
-SHA1 (patch-ac) = 4d46784d569d904e4caa0155177e03c4edbd9260
+SHA1 (patch-ac) = ca0cd60f726854bcaa405a99aefeb523d2f38f28
