@@ -1,4 +1,4 @@
-$NetBSD: patch-ac,v 1.2 2003/01/17 13:49:08 jmmv Exp $
+$NetBSD: patch-ac,v 1.3 2003/01/24 12:41:19 jlam Exp $
 
 --- makefile.orig	Sat Nov  4 02:49:46 2000
 +++ makefile
@@ -109,7 +109,7 @@ $NetBSD: patch-ac,v 1.2 2003/01/17 13:49:08 jmmv Exp $
 +#	@if [ -x $(RANLIB) ] ; then \
 +#	  $(RANLIB) libgdchart.a; \
 +#	fi;
-+	$(LIBTOOL) --mode=link $(CC) -o libgdchart.la $(LIB_OBJS:.o=.lo) $(LDFLAGS) -ljpeg -version-info 0:10:0 -rpath $(PREFIX)
++	$(LIBTOOL) --mode=link $(CC) -o libgdchart.la $(LIB_OBJS:.o=.lo) $(LDFLAGS) -lgd -version-info 0:10:0 -rpath $(PREFIX)
  
  # --- clean ---
  clean:
